--- a/rskj-core/build.gradle
+++ b/rskj-core/build.gradle
@@ -34,6 +34,7 @@ tasks.withType(Javadoc) {
 }
 
 repositories {
+    mavenLocal()
     mavenCentral()
     jcenter()
     maven {
@@ -65,7 +66,7 @@ ext {
     powermockitoVersion = '2.0.2'
     rskLllVersion = '0.0.2'
     logbackVersion = '1.2.2'
-    bitcoinjVersion = '0.14.4-rsk-9'
+    bitcoinjVersion = '0.14.4-rsk-10'
     nettyVersion = '4.0.56.Final'
     nativeLibrary = '1.2.0'
 }
@@ -158,7 +159,7 @@ jar {
     def currentBranch = gitCurrentBranch()
     manifest {
         attributes  'Git-Commit': commitHash,
-                    'Git-Branch': currentBranch
+                'Git-Branch': currentBranch
     }
     from sourceSets.main.output.classesDirs
     from sourceSets.main.output.resourcesDir
