--- a/rskj-core/build.gradle
+++ b/rskj-core/build.gradle
@@ -65,7 +65,7 @@ ext {
     powermockitoVersion = '2.0.2'
     rskLllVersion = '0.0.2'
     logbackVersion = '1.2.2'
-    bitcoinjVersion = '0.14.4-rsk-10-rc'
+    bitcoinjVersion = '0.14.4-rsk-fb'
     nettyVersion = '4.0.56.Final'
     nativeLibrary = '1.2.0'
 }
