some ws refactor

--- a/rskj-core/src/main/resources/config/regtest.conf
+++ b/rskj-core/src/main/resources/config/regtest.conf
@@ -67,3 +67,16 @@ wallet {
     accounts = []
     enabled = true
 }
+
+rpc {
+    providers {
+        web {
+            cors = "*"
+            ws {
+                enabled = true
+                bind_address = 0.0.0.0
+            }
+        }
+    }
+}
+
