configurable server write timeout

--- a/rskj-core/src/main/resources/expected.conf
+++ b/rskj-core/src/main/resources/expected.conf
@@ -220,6 +220,7 @@ rpc = {
                 enabled = <enabled>
                 bind_address = <bind_address>
                 port = <port>
+                server_write_timeout = <timeout>
             }
         }
     }
