--- a/rskj-core/src/main/resources/reference.conf
+++ b/rskj-core/src/main/resources/reference.conf
@@ -282,6 +282,8 @@ rpc {
                 enabled = false
                 bind_address = localhost
                 port = 4445
+                # Shuts down the server when it's not able to write a response after a certain period (expressed in seconds)
+                server_write_timeout = 30
             }
         }
     }
