Added persistence of states cache

--- a/rskj-core/src/main/resources/expected.conf
+++ b/rskj-core/src/main/resources/expected.conf
@@ -265,6 +265,7 @@ scoring = {
 cache = {
   states = {
     max-elements = <max-elements>
+    persist-snapshot = <bool>
   },
   stateRoots = {
     max-elements = <max-elements>
