Added blocked peer IPs in config

--- a/rskj-core/src/main/resources/expected.conf
+++ b/rskj-core/src/main/resources/expected.conf
@@ -115,6 +115,7 @@ peer = {
     capabilities = [<capabilities>]
     privateKey = <privateKey>
     fastBlockPropagation = <bool>
+    blockedIPs = []
 }
 genesis = <genesis>
 genesis_constants.federationPublicKeys = []
