--- a/rskj-core/src/main/resources/reference.conf
+++ b/rskj-core/src/main/resources/reference.conf
@@ -121,6 +121,9 @@ peer {
 
     # flag that allows to propagate a received block without executing it and only checking basic validation rules.
     fastBlockPropagation = false
+
+    # list of IPs of blocked peers
+    blockedIPs = []
 }
 
 miner {
