Added blocked miners config

--- a/rskj-core/src/main/resources/expected.conf
+++ b/rskj-core/src/main/resources/expected.conf
@@ -115,7 +115,8 @@ peer = {
     capabilities = [<capabilities>]
     privateKey = <privateKey>
     fastBlockPropagation = <bool>
-    blockedIPs = []
+    blockedPeerIPs = []
+    blockedMiners = []
 }
 genesis = <genesis>
 genesis_constants.federationPublicKeys = []
