--- a/rskj-core/src/main/resources/reference.conf
+++ b/rskj-core/src/main/resources/reference.conf
@@ -123,7 +123,10 @@ peer {
     fastBlockPropagation = false
 
     # list of IPs of blocked peers
-    blockedIPs = []
+    blockedPeerIPs = []
+
+    # list of blocked miners
+    blockedMiners = []
 }
 
 miner {
