--- a/rskj-core/src/main/resources/reference.conf
+++ b/rskj-core/src/main/resources/reference.conf
@@ -120,7 +120,7 @@ peer {
     }
 
     # flag that allows to propagate a received block without executing it and only checking basic validation rules.
-    fastBlockPropagation = false
+    fastBlockPropagation = true
 }
 
 miner {
