Added blocked peer IDs in config

--- a/rskj-core/src/main/resources/expected.conf
+++ b/rskj-core/src/main/resources/expected.conf
@@ -116,6 +116,7 @@ peer = {
     privateKey = <privateKey>
     fastBlockPropagation = <bool>
     blockedPeerIPs = []
+    blockedPeerIDs = []
     blockedMiners = []
 }
 genesis = <genesis>
