--- a/rskj-core/src/main/resources/reference.conf
+++ b/rskj-core/src/main/resources/reference.conf
@@ -125,6 +125,9 @@ peer {
     # list of IPs of blocked peers
     blockedPeerIPs = []
 
+    # list of IDs of blocked peers
+    blockedPeerIDs = []
+
     # list of blocked miners
     blockedMiners = []
 }
