Refactored banning of peers / miners

--- a/rskj-core/src/main/resources/expected.conf
+++ b/rskj-core/src/main/resources/expected.conf
@@ -115,9 +115,9 @@ peer = {
     capabilities = [<capabilities>]
     privateKey = <privateKey>
     fastBlockPropagation = <bool>
-    blockedPeerIPs = []
-    blockedPeerIDs = []
-    blockedMiners = []
+    bannedPeerIPs = []
+    bannedPeerIDs = []
+    bannedMiners = []
 }
 genesis = <genesis>
 genesis_constants.federationPublicKeys = []
