--- a/rskj-core/src/main/resources/reference.conf
+++ b/rskj-core/src/main/resources/reference.conf
@@ -122,14 +122,14 @@ peer {
     # flag that allows to propagate a received block without executing it and only checking basic validation rules.
     fastBlockPropagation = false
 
-    # list of IPs of blocked peers
-    blockedPeerIPs = []
+    # list of IPs of banned peers
+    bannedPeerIPs = []
 
-    # list of IDs of blocked peers
-    blockedPeerIDs = []
+    # list of IDs of banned peers
+    bannedPeerIDs = []
 
-    # list of blocked miners
-    blockedMiners = []
+    # list of banned miners
+    bannedMiners = []
 }
 
 miner {
