--- a/rskj-core/src/main/resources/reference.conf
+++ b/rskj-core/src/main/resources/reference.conf
@@ -289,7 +289,6 @@ rpc {
             }
         }
     }
-
     # Enabled RPC Modules. If the module is NOT in the list, and mark as "enabled", the rpc calls will be discard.
     # It is possible to enable/disable a particular method in a module
     # {
@@ -359,6 +358,7 @@ rpc {
          }
     ]
     skipRemasc: false
+    gasEstimationCap = 6800000 # block gasLimit, rpc DoS protection for gas estimation
 }
 
 wire {
