--- a/rskj-core/src/main/resources/reference.conf
+++ b/rskj-core/src/main/resources/reference.conf
@@ -121,6 +121,9 @@ peer {
 
     # flag that allows to propagate a received block without executing it and only checking basic validation rules.
     fastBlockPropagation = false
+    
+    # Max number of pending messages that will be allowed per peer 
+    messageQueue.maxSizePerPeer = 2000
 }
 
 miner {
